fixed text overlap for most part

--- a/styles.css
+++ b/styles.css
@@ -79,12 +79,15 @@ table {
 header p, #contact, #plan div, #contact, #intro, #testimonials, #plan h3{
 	max-width: 90%;
 	margin: 0 auto;
+	white-space: wrap;
 }
+
 
 h1 {
 	margin-top: 15px;
 	margin-left: 25px;
-	font-size: 65px;
+	font-size: 55px;
+	overflow-wrap: break-word;
 }
 
 h2 {
@@ -108,12 +111,12 @@ h4, p, q, small, nav, button, form, footer a {
 h4, label {
 	text-transform: uppercase;
 	font-weight: bold;
-	font-size: 25px;
+	font-size: 20px;
 }
 
 
 p {
-	font-size: 20px;
+	font-size: 18px;
 	padding-left: 20px;
 }
 
@@ -256,7 +259,6 @@ input:checked ~ label {
 }
 
 #plan div {
-	display: grid;
 	grid-template-rows: 1fr 1fr 1fr 1fr;
 }
 
